crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__template_literals-4.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(r#\"`Hello, \"world\"`\"#)"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 16,
                    },
                },
                span: 0..16,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 16,
                            },
                        },
                        span: 0..16,
                        kind: TemplateLiteral(
                            TemplateLiteral {
                                exprs: [],
                                quasis: [
                                    TemplateElem {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 16,
                                            },
                                        },
                                        span: 1..15,
                                        raw: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 16,
                                                    },
                                                },
                                                span: 1..15,
                                                value: "Hello, \"world\"",
                                            },
                                        ),
                                        cooked: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 16,
                                                    },
                                                },
                                                span: 1..15,
                                                value: "Hello, \"world\"",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
